--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
     <div class="scoreboard">
       <!-- Modify the scoreboard when important events occur in your game! -->
-      <div class="high">High score: <span>0</span></div>
-      <div class="current">Current score: <span>0</span></div>
-      <div class="collisions">Collisions: <span>0</span></div>
+      <div class="high">High score: <span id="high">0</span></div>
+      <div class="current">Current score: <span id="current">0</span></div>
+      <div class="collisions">Collisions: <span id="collisions">0</span></div>
     </div>
 
     <script src="d3.js" charset="utf-8"></script>
