When higher score reach, go to higher level with more asteroids.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </div>
 
     <script src="d3.js" charset="utf-8"></script>
+    <script src = 'jquery.js' charset='utf-8'></script>
     <script src='watchout.js'></script>
   </body>
 </html>
